--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pygopherd (2.0.18.3+nmu2+srcf1) lucid; urgency=low
+
+  * Skip nonexistent links in directory lists
+
+ -- Malcolm Scott <debianpkg@malc.org.uk>  Mon, 10 Jan 2011 23:10:27 +0000
+
 pygopherd (2.0.18.3+nmu2) unstable; urgency=low
 
   * Non-maintainer upload.
