--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ pygopherd (2.0.18.3+nmu2+srcf1) lucid; urgency=low
   * Render strings of spaces correctly in HTML
   * Don't try to make "URL:" links relative; patch from Jeroen Schot
     (Closes: #516679)
+  * Fix typo in URL redirection message
 
  -- Malcolm Scott <debianpkg@malc.org.uk>  Mon, 10 Jan 2011 23:10:27 +0000
 
