--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,7 @@ pygopherd (2.0.18.3+nmu2+srcf1) lucid; urgency=low
   * Don't try to make "URL:" links relative; patch from Jeroen Schot
     (Closes: #516679)
   * Fix typo in URL redirection message
+  * Allow URLs which do not contain "://", e.g. mailto:
 
  -- Malcolm Scott <debianpkg@malc.org.uk>  Mon, 10 Jan 2011 23:10:27 +0000
 
